# tgcryptomax

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: wheels.yml
dist2/: tgcryptomax-0.0.1-cp312-cp312-linux_x86_64.whl
dist_wheel/: tgcryptomax-0.0.7-cp312-cp312-linux_x86_64.whl
tests/cbc/: test_cbc.py
tests/ctr/: test_ctr.py
tests/ige/: test_ige.py
tgcryptomax/: tgcryptomax.c
