[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgcryptomax"
version = "0.0.1"
description = "Fast and Portable Cryptography Extension Library for Pyrogram"
readme = "README.md"
requires-python = ">=3.7"
license = "LGPL-3.0-or-later"
authors = [{ name = "Dan", email = "dan@pyrogram.org" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["pyrogram", "telegram", "crypto", "cryptography", "encryption", "mtproto", "extension", "library", "aes"]

[project.urls]
"Tracker" = "https://github.com/5hojib/tgcryptomax/issues"
"Community" = "https://t.me/pyrogram"
"Source" = "https://github.com/5hojib/tgcryptomax"
"Documentation" = "https://docs.pyrogram.org"

[tool.setuptools]
packages = []

[tool.cibuildwheel]
enable = ["cpython-freethreading"]
